k8s/demoapp/_k8s/demoapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
  replicas: 2
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: demoapp
        image: reg.ntl.nc/formation/nous:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"        # CPU request
            memory: "32Mi"    # Memory request
          limits:
            cpu: "500m"        # CPU limit
            memory: "256Mi"    # Memory limit
        livenessProbe:
          httpGet:
            path: /       # Adjust to your application’s health endpoint
            port: 5000
          initialDelaySeconds: 10  # Wait before checking (adjust as needed)
          periodSeconds: 10        # Check every 10 seconds
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /       # Adjust to your application's ready endpoint
            port: 5000
          initialDelaySeconds: 5   # Start checking sooner than liveness
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3


---

apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  # match deployment selector
  selector:
    app: demoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
spec:
  ingressClassName: traefik
  rules:
  - host: "demoapp.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          # service to be served by ingress
          service:
            name: demoapp
            port:
              number: 80
